# ChangeLog for net-p2p/deluge
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/deluge/ChangeLog,v 1.60 2008/03/24 17:07:14 armin76 Exp $

  24 Mar 2008; Raúl Porcel <armin76@gentoo.org> deluge-0.5.8.4.ebuild:
  x86 stable

*deluge-0.5.8.6 (12 Mar 2008)

  12 Mar 2008; Raúl Porcel <armin76@gentoo.org> +deluge-0.5.8.6.ebuild,
  deluge-9999.ebuild:
  Version bump

*deluge-0.5.8.5 (29 Feb 2008)

  29 Feb 2008; Raúl Porcel <armin76@gentoo.org> +deluge-0.5.8.5.ebuild:
  Version bump

*deluge-0.5.8.4 (14 Feb 2008)

  14 Feb 2008; Raúl Porcel <armin76@gentoo.org> deluge-0.5.8.3.ebuild,
  +deluge-0.5.8.4.ebuild:
  Version bump

  11 Feb 2008; Raúl Porcel <armin76@gentoo.org> -deluge-0.5.7.1.ebuild:
  old

  10 Feb 2008; Olivier Crête <tester@gentoo.org> deluge-0.5.8.3.ebuild:
  stable on amd64, security bug #208162

  01 Feb 2008; Raúl Porcel <armin76@gentoo.org> deluge-9999.ebuild:
  Fix SVN repo URL

  01 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  deluge-0.5.8.3.ebuild:
  stable x86, security bug 208162

*deluge-0.5.8.3 (29 Jan 2008)

  29 Jan 2008; Raúl Porcel <armin76@gentoo.org> -deluge-0.5.8.1.ebuild,
  -deluge-0.5.8.2.ebuild, +deluge-0.5.8.3.ebuild:
  Version bump, remove old

*deluge-0.5.8.2 (25 Jan 2008)

  25 Jan 2008; Raúl Porcel <armin76@gentoo.org> +deluge-0.5.8.2.ebuild:
  Version bump

  20 Jan 2008; Raúl Porcel <armin76@gentoo.org> metadata.xml:
  This is mine

*deluge-0.5.8.1 (19 Jan 2008)

  19 Jan 2008; Raúl Porcel <armin76@gentoo.org> -deluge-0.5.6.2.ebuild,
  -deluge-0.5.8.ebuild, +deluge-0.5.8.1.ebuild:
  Version bump, remove old, browser has been removed from the app

  14 Jan 2008; Christoph Mende <angelos@gentoo.org> deluge-0.5.7.1.ebuild:
  Stable on amd64 wrt bug #203782

*deluge-0.5.8 (30 Dec 2007)

  30 Dec 2007; Raúl Porcel <armin76@gentoo.org> deluge-0.5.7.1.ebuild,
  -deluge-0.5.8_rc2.ebuild, +deluge-0.5.8.ebuild, deluge-9999.ebuild: