@@ -2,10 +2,12 @@ DIST deluge-0.5.8.3.tar.gz 2117837 RMD160 91de47529a268f916748cac72b40c208d488b1
 DIST deluge-0.5.8.4.tar.gz 2146108 RMD160 233599a98ce8c2a65f98fb2277f1c0658db84774 SHA1 ff412d6d54d76ff132be78223ce991fcf444c7ee SHA256 48a125b751a10ada2e1cc9808e42fb614a0b9ab6386c55bb6f6f19199ab7e373
 DIST deluge-0.5.8.5.tar.gz 2164303 RMD160 7865dfece92fc5aa3e3cbbe744ee7e2e2f7e3fe6 SHA1 3b7930f33112f2ffe194bf4ae328cc38f66302e1 SHA256 a97dd68c5fb5809fde0059596ceb653eb8503757210c42a7b78d860105d6fb14
 DIST deluge-0.5.8.6.tar.gz 2191460 RMD160 9800fe22c27e6dc1d0f121913bea1e9b2770e97f SHA1 3b8df5e4dc7098d6ca352ae812d1a6927e9434ed SHA256 ce1042336862b750f95cdb31804c9a4a31af58bf3092acbacb18341623663362
+DIST deluge-0.5.8.7.tar.gz 4304249 RMD160 48ca4d3428940412c98a20a8b573c4894e736cf1 SHA1 c9418dd045855134023524fc54e6052319ba76d7 SHA256 eff9992946128c51e4693b2005e88bc420806907bceb1de88c724b3d26939e76
 EBUILD deluge-0.5.8.3.ebuild 1336 RMD160 bf40cbd8a2b35f28ac0f667b353780e634b94898 SHA1 f7e944d843162bc723c86574c1582c58456e1c52 SHA256 efb5bc78d99e485a68524f53c336ca09ca5a1b0d1b6a14bebc7ad7def775d7cd
 EBUILD deluge-0.5.8.4.ebuild 1337 RMD160 440c6e8405d79abfcff029570f827654a9bb6ace SHA1 f52caeb190adb8fdca9e1bec2bc16f6d9c919cea SHA256 2871a7c635b10a61bd20d9e0d99c7ee729d672fd8443f46a0c62fb104df4727a
 EBUILD deluge-0.5.8.5.ebuild 1338 RMD160 04b1d1e12b91af0084397c47fcb024d141622eeb SHA1 aa7043610106df31beeb23370270294e607bcedb SHA256 649a16823a0beb0f7daf1fddaba70fad459d8e0245217ef553309c23ce47ce73
 EBUILD deluge-0.5.8.6.ebuild 1338 RMD160 274587491a081fbfea8a701e5ceb3ce28528bb5f SHA1 0b732e6b6fc9ed0aca011fda7bed7bc238264df1 SHA256 9ea385a7e24ee826cff7f13759a41df178082c56e73928f1cfbee09a5f736e1c
+EBUILD deluge-0.5.8.7.ebuild 1338 RMD160 8f16b85776d426b8bd952ad861d3652263ec94f9 SHA1 ed2db25216da5f761f491b8693fb7e51218cb8ec SHA256 dc5c818a3f7a48c8db4b3037a4ce9263c331d5c2da300757d29d13e8c1301d6f
 EBUILD deluge-9999.ebuild 1302 RMD160 ea9070320c9f242db5b84a7965c7e7af69a46174 SHA1 308f601073981b8dceef614cd0e98c160be0b9ef SHA256 46da93c1e6b0c0f778e86df344f03f273484f1843e398461ef43d473921b6c1d
-MISC ChangeLog 8484 RMD160 b5cb1fe6b463a908311c662ca65a1b253f6d7e09 SHA1 f5c255d9b139a03b002e10d97df916badd8eed6a SHA256 75b56f1c949a016b42d572c4400d8799df7ffaf3acab8c304501180277d0d1b3
+MISC ChangeLog 8604 RMD160 c1e389de2cdaea74580684563eb1f26e90a510d4 SHA1 7e7a0b549e53bda027addd0faccdf4740a9b0347 SHA256 f3cded22508f1056f76f64118301f75c275a8997f5fe57ab7ca50a2b5702ce08
 MISC metadata.xml 222 RMD160 0dc4b04f31dcc89402f87c352327fe327b3cf31f SHA1 540337d5841f15b43186e5858f9e24032567de08 SHA256 713b9d1548682d5c1c3686a7b0711acf065a8fa4f386883ace90359d3dceb966
