@@ -1,6 +1,11 @@
 # ChangeLog for net-p2p/deluge
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/deluge/ChangeLog,v 1.60 2008/03/24 17:07:14 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/deluge/ChangeLog,v 1.61 2008/03/26 11:09:44 armin76 Exp $
+
+*deluge-0.5.8.7 (26 Mar 2008)
+
+  26 Mar 2008; Raúl Porcel <armin76@gentoo.org> +deluge-0.5.8.7.ebuild:
+  Version bump
 
   24 Mar 2008; Raúl Porcel <armin76@gentoo.org> deluge-0.5.8.4.ebuild:
   x86 stable
